src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwF1000-dhU-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-maximized true\n    open-floating true\n    default-column-width { fixed 1000; }\n    default-window-height {  }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1000 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1000 × 0, bounds: 1280 × 720, states: []
size: 1000 × 1, bounds: 1280 × 720, states: [Activated]
